added MovieController and able to use api via postman

--- a/src/main/resources/templates/medium-popular-long-name.html
+++ b/src/main/resources/templates/medium-popular-long-name.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>medium populare long name</title>
+    <title>medium popular long name</title>
 </head>
 <body>
 
