--- a/src/main/resources/templates/now-playing.html
+++ b/src/main/resources/templates/now-playing.html
@@ -10,6 +10,7 @@
     <tr th:each="movies : ${movies}">
         <td th:text="${movies.title}"></td>
         <td th:text="${movies.overview}"></td>
+        <td><img width="150px" src="'http://image.tmdb.org/t/p/original' + ${movies.poster_path}"/></td>
     </tr>
 </table>
 
