--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 
+<a href="/now-playing">Now Playing</a>
+<a href="/medium-popular-long-name">Hipster movies</a>
+
 </body>
 </html>
